fix: title z-index 위로 올림

--- a/week1/style.css
+++ b/week1/style.css
@@ -48,6 +48,7 @@ a {
   padding-left: 2em;
   position: sticky;
   top: 0em;
+  z-index: 1;
 }
 
 /*header*/
